mobile menu readability style fix

--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ body a:hover
 
 .mob-menu {
 	display: none;
-	font-weight: 200;
+	font-weight: 400;
 	font-size: 20px;
 	padding-top: 15px;
 	padding-bottom: 15px;
